--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== README
+== The first open-source indexer of sites that accept Bitcoin.
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
